# quadromania

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Game purpose.md  INPUT_SYSTEM_REFACTORING.md  INSTALL  Makefile  README  README.md  STATE_MANAGER_REFACTORING.md  package.sh  plan.md  quadromania  vcpkg.json
.cursor/rules/: core.mdc  cpp-rules.mdc
.superpowers/brainstorm/11091-1773601779/: .server-stopped  tile-style.html
.superpowers/brainstorm/16293-1773644103/: .server-stopped  animation-style.html  menu-layout-v2.html  menu-layout.html  title-concept.html
.superpowers/brainstorm/4822-1773559510/: .server-stopped  palette-picker-layout.html  palettes.html
.superpowers/brainstorm/9667-1773598033/: .server-stopped  color-order.html
QuadroCore/: GameModel.swift  PuzzleGenerator.swift
QuadroTests/: GameModelIntegrationTests.swift  PuzzleGeneratorTests.swift
Quadromania/: AppDelegate.swift  CustomPalettePanel.swift  CustomPaletteStore.swift  GameModel.swift  GamePlayScene.swift  GameScene.swift  GameViewController.swift  HighscoreManager.swift  HighscoreScene.swift  InstructionsScene.swift  PuzzleGenerator.swift  SoundManager.swift  TileGridNode.swift  TilePalette.swift  TitleScene.swift  TransitionStyle.swift  TutorialScene.swift  ViewController.swift
Quadromania.xcodeproj/: project.pbxproj
Quadromania.xcodeproj/xcshareddata/xcschemes/: Quadromania.xcscheme
Quadromania.xcodeproj/xcuserdata/marcojanker.xcuserdatad/xcschemes/: xcschememanagement.plist
Quadromania/Base.lproj/: Main.storyboard
Quadromania/Quadromania.icon/: icon.json
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  app_utils.cmake
docs/superpowers/plans/: 2026-03-13-puzzle-solver.md  2026-03-15-accessibility-tutorial-polish.md  2026-03-15-gameplay-ux-polish.md  2026-03-15-palette-chooser.md  2026-03-15-quadrocore-target.md  2026-03-15-visual-customization.md  2026-03-16-title-screen-redesign.md
docs/superpowers/specs/: 2026-03-13-puzzle-solver-design.md  2026-03-15-accessibility-tutorial-polish.md  2026-03-15-gameplay-ux-polish-design.md  2026-03-15-palette-chooser-design.md  2026-03-15-quadrocore-target-design.md  2026-03-15-visual-customization-design.md  2026-03-16-title-screen-redesign.md
old_src/: main.c  main.h
old_src/audio/: sound.c  sound.h
old_src/core/: game.c  state_manager.c  state_manager.h
old_src/graphics/: fonts.c  fonts.h  renderer.c  renderer.h  ui.c  ui.h
old_src/input/: events.c  events.h
old_src/utils/: logger.cpp  logger.h  random.cpp  random.h
src/: SFont.c  SFont.h  boolean.h  datatypes.h  debug.c  debug.h  event.c  graphics.c  graphics.h  gui.c  highscore.c  main.c  main.h  sound.c  ttf_font.c  ttf_font.h  version.h
src/audio/: sound.c  sound.h
src/common/: boolean.h  datatypes.h  version.h
src/core/: game.c  game.h  state_manager.c  state_manager.h
src/data/: config.c  config.h  highscore.c  highscore.h  resources.c  resources.h
src/graphics/: fonts.c  fonts.h  renderer.c  renderer.h  ttf_font.c  ttf_font.h  ui.c  ui.h
src/input/: events.c  events.h  events_compat.c  events_compat.h  input_manager.c  input_manager.h  joystick_handler.c  joystick_handler.h  keyboard_handler.c  keyboard_handler.h  menu_input.c  menu_input.h  mouse_handler.c  mouse_handler.h  platform_input.c  platform_input.h
src/input/platform/: sdl2_input.c  sdl2_input.h
src/menu/: main_menu.c  main_menu.h  menu_manager.c  menu_manager.h
src/utils/: logger.c  logger.h  random.c  random.h
